Align story and stats correctly

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,9 @@ body {
 
 .game {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .game-container {
@@ -157,6 +160,8 @@ body {
   display: flex;
   color: white;
   justify-content: space-between;
+  margin-bottom: 4px;
+  width: 100%;
 }
 
 @keyframes death {
